--- a/prod/sass/partial/_vars.scss
+++ b/prod/sass/partial/_vars.scss
@@ -7,5 +7,5 @@ $first_color: #7acbfe;	/* CELESTE */
 $second_color:#bc1c80; 	/* MAGENTA */
 
 $third_color:#e1e1e0; 	/* GRIS */
-$third_color_1:#cfcdcd;
-$third_color_2:#898888; /* GRIS tono 1 */
+$third_color_1:#d0d0cf; /* GRIS tono 1 */
+$third_color_2:#c0c0c0; /* GRIS tono 2 */
