--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -14,3 +14,6 @@
 @import 'partial/aside';
 @import 'partial/footer';
 @import 'partial/nav-top';
+
+@import 'partial/loop-recientes';
+@import 'partial/loop-destacados';
