--- a/prod/sass/partial/_vars.scss
+++ b/prod/sass/partial/_vars.scss
@@ -4,8 +4,9 @@ $primary_font:'Open Sans', sans-serif;
 // COLORS
 $first_color: #7acbfe;	/* CELESTE */
 
-$second_color:#bc1c80; 	/* MAGENTA */
+$second_color:#bc1c80; 		/* MAGENTA */
+$second_color_1:#a0186d;
 
-$third_color:#e1e1e0; 	/* GRIS */
-$third_color_1:#d0d0cf; /* GRIS tono 1 */
-$third_color_2:#c0c0c0; /* GRIS tono 2 */
+$third_color:#e1e1e0; 		/* GRIS */
+$third_color_1:#d0d0cf; 	/* GRIS tono 1 */
+$third_color_2:#c0c0c0; 	/* GRIS tono 2 */
