--- a/prod/sass/partial/_footer.scss
+++ b/prod/sass/partial/_footer.scss
@@ -1,102 +1,83 @@
 .footer {
-	width: 100%;
 	background:{color:$third_color;}
+	font:{family:$primary_font;}
+	color:#fff;
 	@include gridle(12);
-	.content {
-		@include gridle(8);
-		@include gridle_push(2);
-		@extend .center, .no-paddings;
-		.first_box, .second_box, .third_box {
-			@include gridle(4);
-			h4 {
-				@extend .no-margins;
-				color:#fff;
-				background:{color:$third_color_1;}
-				font:{weight:lighter;}
-				padding: 5px;
-			}
+	padding-bottom: 20px;
+	.box {
+		@extend .center-width;
+		h4 {
+			@extend .no-margins;
+			color:#fff;
+			font:{family:$primary_font;}
+			padding:5px; 
 		}
 		.first_box {
-			.newsletter {
-				background:{color:$third_color_1;}
-				height: 100px;
-				padding: 20px 10px;
-				input { 
-					@include gridle(10);
-					background:none;
-					border: 1px solid #fff;
-					color:#fff;
-					height: 40px;
-				}
-				a {	
-					@include gridle(2);
-					color:#fff;
-					text:{decoration:none;};
-					height: 40px;
-					border:1px solid #fff;
-					padding: 10px 5px;
-					font:{family:$primary_font;}
-					text:{transform:uppercase;}
-					font:{size:14px;}
-				}
-				h4 {
-					color:#fff;
-					margin-bottom: 10px;
-				}
-			}
-			.news-logo {
-				width: 80%;
-			}
-		}
-	}
-	.footer-nav {
-		ul {
-			@extend .no-paddings;
-		}
-		li {
-			list-style: none;
-			padding: 5px 0;
-		}
-		a {
-			color:#fff;
-			text:{decoration:none;transform:uppercase;}
-			font:{family:$primary_font;}
-			font:{size:12px;}
-		}
-	}
-	.social-footer {
-			margin:10px 0 20px 0;
-			background: none;
-		li {
-			width: 32%;
-			list-style: none;
-			display: inline-block;
-			text:{align:center;}
-			color:#fff;
-			background:{color:$third_color_1;}
-			padding: 15px 0;
-		}
-		i {
-			color:#fff;
-			font:{size:20px;}
-		}
-	}
-	.contacto-footer {
-			margin:10px 0 20px 0;
-		li {
 			@include gridle(6);
-			list-style: none;
-			display: inline-block;
-			text:{align:center;}
-			color:#fff;
-			padding:15px 0;
 			background:{color:$third_color_1;}
-			text:{transform:uppercase;}
-			font:{family:$primary_font; size:15px;}
-			i {
-				width: 100%;
-				font:{size:25px;}
-				margin: 0 0 5px 0;
+			.logo {
+				@include gridle(6);
+			}
+			.newsletter {
+				@include gridle(12);
+				padding-bottom: 20px;
+				input {
+					@include gridle(10);
+					border:1px solid #fff;
+					background: none;
+					padding:10px 5px;
+				}
+				.send {
+					@include gridle(2);
+					border:1px solid #fff;
+					padding:10px 5px;
+					color:#fff;
+					text:{transform:uppercase;align:center;}
+				}
+			}
+		}
+		.second_box {
+			@include gridle(2);
+			.nav {
+				ul {
+					@extend .no-paddings;
+					@extend .no-margins;
+					text:{decoration:none}
+					list-style: none;
+					a {
+						color:#fff;
+						font:{size:14px;}
+						margin-left:5px;
+					}	
+				}
+			}
+		}
+		.third_box {
+			@include gridle(4);
+			.siguenos {
+				text:{decoration:none}
+				list-style: none;
+				li {
+					@include gridle(4);
+					margin:10px 0;
+					i {
+						@include gridle(12);
+						border:1px solid #fff;
+						font:{size:20px;}
+						padding:10px 10px;
+						color:#fff;
+						text:{align:center;}
+					}
+				}
+			}
+			.contactanos {
+				@extend .siguenos;
+				li {
+					@include gridle(6);
+					a {
+						color:#fff;
+					}
+				}
 			}
 		}
 	}
