--- a/prod/sass/partial/_main.scss
+++ b/prod/sass/partial/_main.scss
@@ -20,3 +20,10 @@
 .center{
 	margin:0 auto !important;
 }
+a {
+	text:{decoration:none;}
+}
+.center-width {
+	max-width: 1280px;
+	margin:0 auto;
+}
