--- a/prod/sass/main.scss
+++ b/prod/sass/main.scss
@@ -18,3 +18,5 @@
 @import 'partial/loop-recientes';
 @import 'partial/loop-destacados';
 @import 'partial/loop-principal';
+
+@import 'partial/single';
