--- a/prod/sass/partial/_vars.scss
+++ b/prod/sass/partial/_vars.scss
@@ -1,8 +1,10 @@
 // FONTS 
 $primary_font:'Open Sans', sans-serif;
+$second_font:'Roboto', sans-serif;
 
 // COLORS
-$first_color: #7acbfe;	/* CELESTE */
+$first_color: #6cccff;		/* CELESTE */
+$first_color_1:#74c0f0;		/* CELESTE tono 1*/
 
 $second_color:#bc1c80; 		/* MAGENTA */
 $second_color_1:#a0186d;
