--- a/prod/sass/partial/_loop-principal.scss
+++ b/prod/sass/partial/_loop-principal.scss
@@ -71,47 +71,51 @@
 		.paginador {
 			@include gridle_clear(both);
 			@extend #reciente;
-			h2{
-				padding: 6px 45% 0 10px;
-			}
-			.pages {
-				position:absolute;
-				bottom: 0;
-				left: 0;
-				background:{color:$first_color_1;}
-				color:#fff;
-				width: 100%;
-				padding: 20px 0;
+			.bg-color {
+				h2{
+				padding: 39px 50% 0 10px;
+				}
+				.pages {
+					position:absolute;
+					bottom: 0;
+					background:{color:$first_color_1;}
+					color:#fff;
+					width: 95%;
+					padding: 20px 0;
+				}
 			}
 		}
 		#reciente {
-			background:{color:$first_color;}
-			h2 {
-				font:{family:$primary_font; size:60px;weight: lighter;style: italic;}
-				color:#fff;
-				font-weight: lighter;
-				padding: 5px 30px 0 10px;
-				line-height: 60px;
-				margin-bottom:0;
-			}
-			.tags{
+			.bg-color {
+				background:{color:$first_color;}
+				height: 280px;
+				h2 {
+					@extend .no-margins;
+					font:{family:$primary_font; size:60px;weight: lighter;style: italic;}
+					color:#fff;
+					font-weight: lighter;
+					padding: 5px 30px 0 10px;
+					line-height: 60px;
+				}
+				.tags{
 				@extend .no-margins;
 				@extend .no-paddings;
 				display: block;
 				color:#fff;
 				list-style: none;
-				ul {
-					padding:0px 20px 0 10px;
-				}
-				li{
-					padding:2px 5px;
-					margin: 2px 2px 0 0;
-					display: inline-block;
-					background:{color:$first_color_1;}
-					a{
-						font:{size:12px;family:$primary_font;}
-						color:#fff;
-						text:{decoration:none;}
+					ul {
+						padding:0px 20px 0 10px;
+						li{
+							padding:2px 5px;
+							margin: 2px 2px 0 0;
+							display: inline-block;
+							background:{color:$first_color_1;}
+							a {
+								font:{size:12px;family:$primary_font;}
+								color:#fff;
+								text:{decoration:none;}
+							}
+						}
 					}
 				}
 			}
