--- a/prod/sass/partial/_loop-principal.scss
+++ b/prod/sass/partial/_loop-principal.scss
@@ -1,5 +1,9 @@
 .content-loop-home{
+	@include gridle(12);
+	@extend .no-paddings;
 	clear:both;
+	margin:40px 0;
+	height: auto;
 	#container {
 		@extend .center-width;
 		height: auto !important;
@@ -10,57 +14,67 @@
 			height:280px;
 			left:0 !important;
 			top:0 !important;
-			.social {
-				@extend .text-left;
-				background:{color:$third_color;}
-				color:$third_color_2;
-				height:auto;
-				top:32px;
-				left:10px;
-				position: absolute;
-				list-style: none;
-				z-index: 10;
-				li {
-					display: inline-block;
-					padding: 5px;
+			.bg-color-none {
+				@include gridle(12);
+				height:280px;
+				.social {
+					@extend .text-left;
 					background:{color:$third_color;}
-				}
-			}
-			.principal-post {
-				position: absolute;
-				background-repeat: no-repeat;
-				background-size: cover;
-				z-index: 1;
-				h2 {
-					@extend .text-left;
-					color:#fff;
-					font:{size:20px;}
-					padding: 21px 8px 20px 12px;
-					margin: 160px 0 20px 0;
-					background-color: rgba(0, 0, 0, 0.5);
-					bottom: 9px;
-					left: 20px;
-					border-left: 13px solid #bc1c80;
-					position: relative;
-					width: 82%;
-				}
-				.date {
-					@extend .text-left;
-					background:{color:$first_color;}
-					opacity: 0.8;
-					height: 21px;
-					top: 7px;
-					left: 0;
-					z-index: 2;
+					color:$third_color_2;
+					height:auto;
+					top:32px;
+					left:10px;
 					position: absolute;
-					padding: 1px 60px 0px 0px;
-					p {	
-						@extend .no-margins;
+					list-style: none;
+					z-index: 10;
+					li {
+						display: inline-block;
+						padding: 5px;
+						background:{color:$third_color;}
+					}
+				}
+				.principal-post {
+					position: absolute;
+					background-repeat: no-repeat;
+					background-size: cover;
+					z-index: 1;
+					padding: 0;
+					margin: 0;
+					top: 0;
+					left: 10px;
+					height: 280px;
+					width: 95%;
+					h2 {
+						@extend .text-left;
 						color:#fff;
-						font:{size:12px; font-family:$primary_font;weight:lighter;style: italic;}
-						padding:3px 0 3px 10px;
-						text:{transform: uppercase;}
-						z-index: 10;
+						font:{size:20px;}
+						padding: 21px 8px 20px 12px;
+						margin: 160px 0 20px 0;
+						background-color: rgba(0, 0, 0, 0.5);
+						bottom: 0;
+						left: 20px;
+						border-left:6px solid #bc1c80;
+						position: relative;
+						width: 82%;
+					}
+					.date {
+						@extend .text-left;
+						background:{color:$first_color;}
+						opacity: 0.8;
+						height: 21px;
+						top: 7px;
+						left: 0;
+						z-index: 2;
+						position: absolute;
+						padding: 1px 60px 0px 0px;
+						p {	
+							@extend .no-margins;
+							color:#fff;
+							font:{size:12px; font-family:$primary_font;weight:lighter;style: italic;}
+							padding:3px 0 3px 10px;
+							text:{transform: uppercase;}
+							z-index: 10;
+						}
 					}
 				}
 			}
@@ -73,7 +87,7 @@
 			@extend #reciente;
 			.bg-color {
 				h2{
-				padding: 39px 50% 0 10px;
+				padding:45px 60% 0 10px !important;
 				}
 				.pages {
 					position:absolute;
@@ -81,7 +95,35 @@
 					background:{color:$first_color_1;}
 					color:#fff;
 					width: 95%;
-					padding: 20px 0;
+					.pagination {
+						@extend .no-paddings;
+						@include gridle(12);
+						.page-numbers {
+							display: none;
+						}
+						.next {
+							@include gridle(6);
+							@extend .text-right;
+							@extend .no-margins;
+							display: block !important;
+							float: right;
+							color:#fff;
+							font:{size:20px;}
+							padding: 20px 0;
+							background:{color:$first_color_1}
+							.fa {
+								@extend .text-center;
+								display: block;
+								margin: 0 auto;
+							}
+						}
+						.prev {
+							@extend .next;
+							float: left;
+							padding: 20px 0;
+							background:{color:$first_color_2}
+						}
+					}
 				}
 			}
 		}
@@ -94,7 +136,7 @@
 					font:{family:$primary_font; size:60px;weight: lighter;style: italic;}
 					color:#fff;
 					font-weight: lighter;
-					padding: 5px 30px 0 10px;
+					padding: 60px 30px 0 10px;
 					line-height: 60px;
 				}
 				.tags{
@@ -121,4 +163,4 @@
 			}
 		}
 	}
-}
+}  
