--- a/prod/sass/partial/_vars.scss
+++ b/prod/sass/partial/_vars.scss
@@ -5,10 +5,12 @@ $second_font:'Roboto', sans-serif;
 // COLORS
 $first_color: #6cccff;		/* CELESTE */
 $first_color_1:#74c0f0;		/* CELESTE tono 1*/
+$first_color_2:#6cb3df;		/* CELESTE tono 2*/
+
 
 $second_color:#bc1c80; 		/* MAGENTA */
 $second_color_1:#a0186d;
 
 $third_color:#e1e1e0; 		/* GRIS */
 $third_color_1:#d0d0cf; 	/* GRIS tono 1 */
-$third_color_2:#c0c0c0; 	/* GRIS tono 2 */
+$third_color_2:#a2a2a2; 	/* GRIS tono 2 */
